import Payment from "./Payment";

export default class CardPayment extends Payment {
}
