enum PaymentStatus {
  Pending = 'Pending',
  Payed = 'Payed',
  Refunded = 'Refund',
}

export default PaymentStatus;
