export default abstract class Service {
  abstract getRate(): number;
}
